# public/swagger.json
@@ -121,6 +121,70 @@
         }
       }
     },
+    "/menu/menuList": {
+      "get": {
+        "summary": "获取菜单列表",
+        "description": "分页获取系统菜单列表",
+        "tags": [
+          "Menu"
+        ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "pageNum",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            },
+            "description": "当前页码"
+          },
+          {
+            "in": "query",
+            "name": "pageSize",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            },
+            "description": "每页数量"
+          }
+        ],
+        "responses": {
+          "0": {
+            "description": "获取成功",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "code": {
+                      "type": "number",
+                      "example": 0
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "success"
+                    },
+                    "data": {
+                      "type": "object",
+                      "properties": {
+                        "list": {
+                          "type": "array",
+                          "items": []
+                        },
+                        "total": {
+                          "type": "number",
+                          "example": 100
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/common/upload": {
       "post": {
         "summary": "文件上传",
@@ -179,6 +243,10 @@
     {
       "name": "Chat",
       "description": "聊天相关接口"
+    },
+    {
+      "name": "Menu",
+      "description": "菜单"
     },
     {
       "name": "Common",
